--- a/Web/index.html
+++ b/Web/index.html
@@ -855,7 +855,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Populyar Brendləri İzləyin</h2>
-                <p>@techverse</p>
+                <p>@elesgerli070</p>
             </div>
             <div class="instagram-grid">
                 <a href="#" class="instagram-item" target="_blank">
